--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #f2f2f2;
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Lexend', Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+  .max-container {
+    @apply mx-auto md:max-w-[1200px] px-10;
+  }
+  .btn_primary { 
+    @apply rounded-full px-4 py-3 font-semibold text-base bg-orange-600 text-white hover:bg-orange-700;
+  }
+  
+  .btn_outline  { 
+    @apply  border rounded-full px-4 py-3 border-gray-300 font-semibold text-base hover:text-white hover:bg-black; 
+  }
+  .section-heading {
+    @apply font-semibold text-4xl tracking-tight text-black md:text-5xl;
+  }
+  .section-paragraph {
+    @apply text-lg font-light md:w-1/2 text-center text-gray-600;
+  }
+  .section-subtitle {
+    @apply uppercase font-bold text-gray-500 text-sm md:text-base;
   }
 }
